Fixed spacing and background

--- a/future.css
+++ b/future.css
@@ -1,11 +1,15 @@
 *{
     padding: 0;
+    margin: 0;
+}
+
+.content-wrapper{
     /* background-color: rgb(216, 216, 160); */
     background-image: url("assets/FUTURE/Sunshine\ background\ 33\ \(+\).png");
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100vh;
     margin: auto;
-
 }
 
 .site-heading {
